# wargame-a

./: Board.cpp  Board.hpp  Board.hpp.original  CMakeLists.txt  Demo.cpp  DemoGame.cpp  DemoGame.hpp  FootCommander.cpp  FootCommander.hpp  FootSoldier.cpp  FootSoldier.hpp  Paramedic.cpp  Paramedic.hpp  ParamedicCommander.cpp  ParamedicCommander.hpp  Sniper.cpp  Sniper.hpp  SniperCommander.cpp  SniperCommander.hpp  Soldier.hpp  Test.cpp  TestCounter.cpp  grade
